RESOLVED FIXED 76083
Fail to run non-async scripts in IETC 11_RemovingAsyncScript
https://bugs.webkit.org/show_bug.cgi?id=76083
Summary Fail to run non-async scripts in IETC 11_RemovingAsyncScript
Eric Seidel (no email)
Reported 2012-01-11 11:39:18 PST
Fail to run non-async scripts in IETC 11_RemovingAsyncScript http://samples.msdn.microsoft.com/ietestcenter/HTML5/show_async_test.htm?11_RemovingAsyncScript We only show "4". Unclear why we don't run 1 2 or 3.
Attachments
Patch (4.96 KB, patch)
2012-01-12 16:09 PST, jochen
no flags
Patch (8.19 KB, patch)
2012-01-13 00:22 PST, jochen
no flags
Patch (10.52 KB, patch)
2012-01-13 01:50 PST, jochen
no flags
Patch (10.57 KB, patch)
2012-01-13 03:02 PST, jochen
no flags
Eric Seidel (no email)
Comment 1 2012-01-11 23:36:57 PST
I suspect this will be simple to track down in a debugger. I didn't spend very long looking at the reduction.
James Simonsen
Comment 2 2012-01-12 14:34:16 PST
Actually, Jochen has already started on this. So I'll pass this bug to him.
jochen
Comment 3 2012-01-12 16:09:16 PST
Eric Seidel (no email)
Comment 4 2012-01-12 16:45:40 PST
Comment on attachment 122331 [details] Patch ick. Really? We need PHP for this? Looks fine though.
James Simonsen
Comment 5 2012-01-12 16:48:53 PST
View in context: https://bugs.webkit.org/attachment.cgi?id=122331&action=review > Source/WebCore/dom/ScriptElement.cpp:85 > + if (!m_willExecuteInOrder) Hmm. I can't find anything in the spec for this. It seems like once we reach the end of prepareScript(), we need to execute it, unless it's parser-inserted and no longer in the document. That means we were broken in the async=true case too. The correct fix is probably to remove this function entirely. http://www.whatwg.org/specs/web-apps/current-work/multipage/scripting-1.html#execute-the-script-block Can you try running the tests without this? If none break, we should remove it. If one does, we should add a FIXME that this is non-standard. > LayoutTests/http/tests/misc/async-script-expected.txt:1 > +Test that a synchronous script tag is executed in the right order, even if it's removed from the document after before it was loaded. "after before"?
jochen
Comment 6 2012-01-13 00:22:36 PST
Adam Barth
Comment 7 2012-01-13 00:50:32 PST
Comment on attachment 122386 [details] Patch Did you want to add a test for the async=true case as well?
jochen
Comment 8 2012-01-13 01:50:16 PST
Adam Barth
Comment 9 2012-01-13 01:54:05 PST
Comment on attachment 122393 [details] Patch Thanks!
WebKit Review Bot
Comment 10 2012-01-13 02:19:53 PST
Comment on attachment 122393 [details] Patch Attachment 122393 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/11142945 New failing tests: http/tests/misc/async-script.html
jochen
Comment 11 2012-01-13 03:02:39 PST
Eric Seidel (no email)
Comment 12 2012-01-13 03:07:19 PST
Comment on attachment 122405 [details] Patch LGTM.
Tony Gentilcore
Comment 13 2012-01-13 03:31:16 PST
LGTM, nice
WebKit Review Bot
Comment 14 2012-01-13 06:20:35 PST
Comment on attachment 122405 [details] Patch Clearing flags on attachment: 122405 Committed r104927: <http://trac.webkit.org/changeset/104927>
WebKit Review Bot
Comment 15 2012-01-13 06:20:40 PST
All reviewed patches have been landed. Closing bug.
Csaba Osztrogonác
Comment 16 2012-01-15 00:48:12 PST
Reopen, because it fails on SL and Qt: --- /Volumes/Data/slave/snowleopard-intel-release-tests/build/layout-test-results/http/tests/misc/async-script-expected.txt +++ /Volumes/Data/slave/snowleopard-intel-release-tests/build/layout-test-results/http/tests/misc/async-script-actual.txt @@ -1,5 +1,6 @@ +FAIL: Timed out waiting for notifyDone to be called Test that an asynchronous script tag is executed, even if it's removed from the document before it was loaded. This test passes if the word "PASS" is displayed below. -PASS + Could you check what the problem is?
jochen
Comment 17 2012-01-15 00:55:23 PST
(In reply to comment #16) > Reopen, because it fails on SL and Qt: > --- /Volumes/Data/slave/snowleopard-intel-release-tests/build/layout-test-results/http/tests/misc/async-script-expected.txt > +++ /Volumes/Data/slave/snowleopard-intel-release-tests/build/layout-test-results/http/tests/misc/async-script-actual.txt > @@ -1,5 +1,6 @@ > +FAIL: Timed out waiting for notifyDone to be called > Test that an asynchronous script tag is executed, even if it's removed from the document before it was loaded. > > This test passes if the word "PASS" is displayed below. > > -PASS > + > > > Could you check what the problem is? looking..
jochen
Comment 18 2012-01-15 14:45:23 PST
posted a fix in bug 76350
Alexey Proskuryakov
Comment 19 2012-04-25 15:15:27 PDT
*** Bug 84884 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.