Source/WebCore: Once we prepared a script element for execution, execute it, even if the script element was meanwhile removed from the dom tree. https://bugs.webkit.org/show_bug.cgi?id=76083

Reviewed by Adam Barth.

This bug was caught by the following IE Test Center test:

http://samples.msdn.microsoft.com/ietestcenter/HTML5/show_async_test.htm?11_RemovingAsyncScript

Test: http/tests/misc/async-script-removed.html
      http/tests/misc/async-script.html

* dom/ScriptElement.cpp:
* dom/ScriptElement.h:
* dom/ScriptRunner.cpp:
(WebCore::ScriptRunner::queueScriptForExecution):
* html/HTMLScriptElement.cpp:
* html/HTMLScriptElement.h:
* svg/SVGScriptElement.cpp:
* svg/SVGScriptElement.h:

LayoutTests: Once we've prepared script element for execution, execute it, even if the script element was meanwhile removed from the dom tree.
https://bugs.webkit.org/show_bug.cgi?id=76083

Reviewed by Adam Barth.

* http/tests/misc/async-script-expected.txt: Added.
* http/tests/misc/async-script-removed-expected.txt: Added.
* http/tests/misc/async-script-removed.html: Added.
* http/tests/misc/async-script.html: Added.
* http/tests/misc/resources/delayed-log.php: Added.


git-svn-id: svn://svn.chromium.org/blink/trunk@104927 bbb929c8-8fbe-4397-9dbb-9b2b20218538