Source/WebCore/html/HTMLScriptElement.h
@@ -46,7 +46,6 @@ private:
 
     virtual void parseMappedAttribute(Attribute*);
     virtual void insertedIntoDocument();
-    virtual void removedFromDocument();
     virtual void childrenChanged(bool changedByParser = false, Node* beforeChange = 0, Node* afterChange = 0, int childCountDelta = 0);
     virtual void attributeChanged(Attribute*, bool preserveDecls = false);
 
