third_party/WebKit/Source/WebCore/dom/ScriptElement.cpp
@@ -81,12 +81,6 @@ void ScriptElement::insertedIntoDocument()
         prepareScript(); // FIXME: Provide a real starting line number here.
 }
 
-void ScriptElement::removedFromDocument()
-{
-    // Eventually stop loading any not-yet-finished content
-    stopLoadRequest();
-}
-
 void ScriptElement::childrenChanged()
 {
     if (!m_parserInserted && m_element->inDocument())
