third_party/WebKit/Source/WebCore/dom/ScriptElement.h
@@ -68,7 +68,6 @@ protected:
 
     // Helper functions used by our parent classes.
     void insertedIntoDocument();
-    void removedFromDocument();
     void childrenChanged();
     void handleSourceAttribute(const String& sourceUrl);
     void handleAsyncAttribute();
