third_party/WebKit/Source/WebCore/dom/ScriptRunner.cpp
@@ -57,7 +57,6 @@ void ScriptRunner::queueScriptForExecution(ScriptElement* scriptElement, CachedR
 
     Element* element = scriptElement->element();
     ASSERT(element);
-    ASSERT(element->inDocument());
 
     m_document->incrementLoadEventDelayCount();
 
