third_party/WebKit/Source/WebCore/html/HTMLScriptElement.cpp
@@ -86,12 +86,6 @@ void HTMLScriptElement::insertedIntoDocument()
     ScriptElement::insertedIntoDocument();
 }
 
-void HTMLScriptElement::removedFromDocument()
-{
-    HTMLElement::removedFromDocument();
-    ScriptElement::removedFromDocument();
-}
-
 void HTMLScriptElement::setText(const String &value)
 {
     ExceptionCode ec = 0;
