third_party/WebKit/LayoutTests/http/tests/misc/resources/delayed-log.php
@@ -1,0 +1,10 @@
+FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
+<?php
+  header("Content-Type: text/javascript");
+  sleep($_GET["delay"]);
+  echo "log('" . $_GET["msg"] . "');\n";
+  if ($_GET["done"] == "1") {
+      echo "if (window.layoutTestController)\n";
+      echo "    layoutTestController.notifyDone();\n";
+  }
+?>
